Fix workspace editing